yaml-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-demo-app
spec:
  selector:
    app: nodejs-demo-app
  ports:
    - protocol: TCP
      port: 80  # Expose port 80
      targetPort: 5000  # Internal port the app listens on
  type: LoadBalancer  # This will create an external IP if you're using a cloud provider
