yaml-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-demo-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: <your-domain-name>  # Replace with your domain or load balancer IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-demo-app
            port:
              number: 80
